Bug 78469 - FileCorrupt:During export LO was adding wrong tags inside <w:sdtPr>
Summary: FileCorrupt:During export LO was adding wrong tags inside <w:sdtPr>
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: BSA target:4.3.0
Keywords:
: 78660 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-05-09 05:54 UTC by Tushar Bende
Modified: 2014-05-21 09:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (1.44 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-09 05:55 UTC, Tushar Bende
Details
Screenshot showing xml mismatch (324.77 KB, image/jpeg)
2014-05-09 05:56 UTC, Tushar Bende
Details
RT file which is corrupt (1.43 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-09 05:57 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-05-09 05:54:02 UTC
Problem description: After round trip,TC end tag mismatch in Header1.xml hence the file is getting corrupted.

Steps to reproduce:
1. Open file in LibreOffice
2. Click File -> Save As (Microsoft word 2007/2013(.docx)) format
3. It saves as .docx
4. Open the same file again which got roundtripped.

Expected Result:
The file should open properly after roundtrip.

Actual Result:
The file is corrupt.
              
Operating System: All
Version: 4.3.0.0.alpha0+ Master
Comment 1 Tushar Bende 2014-05-09 05:55:49 UTC
Created attachment 98729 [details]
File for which this issue can be reproduced
Comment 2 Tushar Bende 2014-05-09 05:56:23 UTC
Created attachment 98730 [details]
Screenshot showing xml mismatch
Comment 3 Tushar Bende 2014-05-09 05:57:56 UTC
Created attachment 98731 [details]
RT file which is corrupt
Comment 4 Tushar Bende 2014-05-09 07:25:38 UTC
Problem description: After round trip,hence the file is getting corrupted and corruption reason is NOT the TC tag mismatch.
It is because of some ECMA specification violation.Still checking the RT doc.
Comment 5 Jorendc 2014-05-09 21:03:25 UTC
Repro, tested using windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: e9b2787c2ece4c8260fbac6359257e1829c917d4
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-09_06:36:37

Kind regards,
Joren
Comment 6 Yogesh Bharate 2014-05-16 11:29:28 UTC
*** Bug 78660 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2014-05-21 09:20:57 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1fc9923b194da3ba346f0f0583c130b4284642ba

fdo#78469 FileCorrupt:During export LO was adding wrong tags inside <w:sdtPr>



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.