sw/source/filter/ww8/docxattributeoutput.cxx
@@ -372,6 +372,9 @@ void DocxAttributeOutput::EndParagraph( ww8::WW8TableNodeInfoInner::Pointer_t pT
     m_pSerializer->endElementNS( XML_w, XML_p );
 
     WriteSdtBlock( m_nParagraphSdtPrToken, m_pParagraphSdtPrTokenChildren, m_pParagraphSdtPrDataBindingAttrs );
+    //sdtcontent is written so Set m_bParagraphHasDrawing to false
+    m_rExport.SdrExporter().setParagraphHasDrawing( false );
+    m_bRunTextIsOn = false;
     m_pSerializer->mergeTopMarks();
 
     // Check for end of cell, rows, tables here
@@ -411,10 +414,10 @@ void DocxAttributeOutput::WriteSdtBlock( sal_Int32& nSdtPrToken, ::sax_fastparse
             m_pSerializer->singleElement( nSdtPrToken,
                                           FSNS(XML_w, XML_val), OString::number( rand() ),
                                           FSEND );
-        else if( nSdtPrToken > 0 )
+        else if( (nSdtPrToken > 0) && !(m_bRunTextIsOn && m_rExport.SdrExporter().IsParagraphHasDrawing()))
             m_pSerializer->singleElement( nSdtPrToken, FSEND );
 
-        if( pSdtPrDataBindingAttrs )
+        if(( pSdtPrDataBindingAttrs ) && !m_rExport.SdrExporter().IsParagraphHasDrawing())
         {
             XFastAttributeListRef xAttrList( pSdtPrDataBindingAttrs );
             m_pSerializer->singleElementNS( XML_w, XML_dataBinding, xAttrList );
@@ -1655,7 +1658,7 @@ void DocxAttributeOutput::RunText( const OUString& rText, rtl_TextEncoding /*eCh
     {
         m_closeHyperlinkInPreviousRun = true;
     }
-
+    m_bRunTextIsOn = true;
     // one text can be split into more <w:t>blah</w:t>'s by line breaks etc.
     const sal_Unicode *pBegin = rText.getStr();
     const sal_Unicode *pEnd = pBegin + rText.getLength();
@@ -7388,6 +7391,7 @@ DocxAttributeOutput::DocxAttributeOutput( DocxExport &rExport, FSHelperPtr pSeri
       m_pRedlineData( NULL ),
       m_nRedlineId( 0 ),
       m_bOpenedSectPr( false ),
+      m_bRunTextIsOn( false ),
       m_bWritingHeaderFooter( false ),
       m_sFieldBkm( ),
       m_nNextBookmarkId( 0 ),
