sw/source/filter/ww8/docxsdrexport.hxx
@@ -65,6 +65,9 @@ public:
     bool getFrameBtLr();
 
     bool IsDrawingOpen();
+    void setDrawingOpen(bool bDrawingOpen);
+    bool IsParagraphHasDrawing();
+    void setParagraphHasDrawing(bool bParagraphHasDrawing);
     sax_fastparser::FastAttributeList*& getFlyFillAttrList();
     sax_fastparser::FastAttributeList* getFlyWrapAttrList();
     void setFlyWrapAttrList(sax_fastparser::FastAttributeList* pAttrList);
